sgx/third_party/crates-io/vendor/rocket_codegen/tests/ui-fail/responder.stderr
error: need at least one field
 --> $DIR/responder.rs:6:1
  |
6 | struct Thing1;
  | ^^^^^^^^^^^^^^
  |
note: error occurred while deriving `Responder`
 --> $DIR/responder.rs:5:10
  |
5 | #[derive(Responder)]
  |          ^^^^^^^^^

error: need at least one field
  --> $DIR/responder.rs:10:14
   |
10 | struct Thing2();
   |              ^^
   |
note: error occurred while deriving `Responder`
  --> $DIR/responder.rs:9:10
   |
9  | #[derive(Responder)]
   |          ^^^^^^^^^

error: need at least one field
  --> $DIR/responder.rs:15:5
   |
15 |     Bark,
   |     ^^^^
   |
note: error occurred while deriving `Responder`
  --> $DIR/responder.rs:13:10
   |
13 | #[derive(Responder)]
   |          ^^^^^^^^^

error: only one lifetime is supported
  --> $DIR/responder.rs:20:14
   |
20 | struct Thing4<'a, 'b>(&'a str, &'b str);
   |              ^^^^^^^^
   |
note: error occurred while deriving `Responder`
  --> $DIR/responder.rs:19:10
   |
19 | #[derive(Responder)]
   |          ^^^^^^^^^

error: type generics are not supported
  --> $DIR/responder.rs:24:15
   |
24 | struct Thing5<T>(T);
   |               ^
   |
note: error occurred while deriving `Responder`
  --> $DIR/responder.rs:23:10
   |
23 | #[derive(Responder)]
   |          ^^^^^^^^^

error: type generics are not supported
  --> $DIR/responder.rs:28:23
   |
28 | struct Thing6<'a, 'b, T>(&'a str, &'b str, T);
   |                       ^
   |
note: error occurred while deriving `Responder`
  --> $DIR/responder.rs:27:10
   |
27 | #[derive(Responder)]
   |          ^^^^^^^^^

error: invalid or unknown content-type
  --> $DIR/responder.rs:33:31
   |
33 |     #[response(content_type = "")]
   |                               ^^
   |
note: error occurred while deriving `Responder`
  --> $DIR/responder.rs:31:10
   |
31 | #[derive(Responder)]
   |          ^^^^^^^^^

error: invalid or unknown content-type
  --> $DIR/responder.rs:40:31
   |
40 |     #[response(content_type = "idk")]
   |                               ^^^^^
   |
note: error occurred while deriving `Responder`
  --> $DIR/responder.rs:38:10
   |
38 | #[derive(Responder)]
   |          ^^^^^^^^^

error: invalid value: expected string
  --> $DIR/responder.rs:47:31
   |
47 |     #[response(content_type = 100)]
   |                               ^^^
   |
note: error occurred while deriving `Responder`
  --> $DIR/responder.rs:45:10
   |
45 | #[derive(Responder)]
   |          ^^^^^^^^^

error: status must be in range [100, 600)
  --> $DIR/responder.rs:54:25
   |
54 |     #[response(status = 8)]
   |                         ^
   |
note: error occurred while deriving `Responder`
  --> $DIR/responder.rs:52:10
   |
52 | #[derive(Responder)]
   |          ^^^^^^^^^

error: invalid value: expected unsigned integer
  --> $DIR/responder.rs:61:25
   |
61 |     #[response(status = "404")]
   |                         ^^^^^
   |
note: error occurred while deriving `Responder`
  --> $DIR/responder.rs:59:10
   |
59 | #[derive(Responder)]
   |          ^^^^^^^^^

error: invalid value: expected unsigned integer
  --> $DIR/responder.rs:68:25
   |
68 |     #[response(status = "404", content_type = "html")]
   |                         ^^^^^
   |
note: error occurred while deriving `Responder`
  --> $DIR/responder.rs:66:10
   |
66 | #[derive(Responder)]
   |          ^^^^^^^^^

error: invalid value: expected string
  --> $DIR/responder.rs:75:45
   |
75 |     #[response(status = 404, content_type = 120)]
   |                                             ^^^
   |
note: error occurred while deriving `Responder`
  --> $DIR/responder.rs:73:10
   |
73 | #[derive(Responder)]
   |          ^^^^^^^^^

error: aborting due to 13 previous errors

